@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2003/07/22 04:14:32 martti Exp $
+# $NetBSD: Makefile,v 1.8 2004/04/25 06:03:51 minskim Exp $
 
-DISTNAME=	HTML-SimpleParse-0.10
+DISTNAME=	HTML-SimpleParse-0.12
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5hsp
 CATEGORIES=	www perl5
@@ -9,7 +9,10 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=HTML/}
 MAINTAINER=	tech-pkg@NetBSD.org
 COMMENT=	Perl5 module implementing a bare-bones HTML parser
 
-USE_BUILDLINK2=		YES
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
+
+USE_BUILDLINK3=		YES
+USE_LANGUAGES=		# empty
 PERL5_PACKLIST=		${PERL5_SITEARCH}/auto/HTML/SimpleParse/.packlist
 
 .include "../../lang/perl5/module.mk"
